# automation-assistant

./: .gitignore  Dockerfile  README.md  cookies.txt  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
automation_assistant/: guardrails.py  llm_parser.py  main.py  metrics_server.py  prompts.py  workflow_builder.py
n8n_data/: config
tests/: test_guardrails.py  test_llm_parser.py  test_main.py  test_workflow_builder.py
